--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,8 @@
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.input-field {
+  padding: 0.5em;
+  background-color: rgba(255, 255, 255, 0.05);
+}
